--- a/src/ponteestreita/FXMLDocument.fxml
+++ b/src/ponteestreita/FXMLDocument.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 
-<AnchorPane id="AnchorPane" prefHeight="500.0" prefWidth="915.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ponteestreita.FXMLDocumentController">
+<AnchorPane id="AnchorPane" fx:id="anchor" prefHeight="500.0" prefWidth="915.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ponteestreita.FXMLDocumentController">
     <children>
-        <Button fx:id="start" layoutX="639.0" layoutY="445.0" onAction="#handleButtonAction" text="Iniciar" />
+        <Button fx:id="start" layoutX="639.0" layoutY="445.0" onAction="#startButton" text="Iniciar" />
       <ImageView fitHeight="391.0" fitWidth="696.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../imagens/Ponte2.jpg" />
@@ -29,7 +29,7 @@
       <Label layoutX="731.0" layoutY="428.0" text="ELIMINA CARRO" />
       <TextField fx:id="eliminaCarroId" layoutX="700.0" layoutY="445.0" promptText="Id" />
       <Button fx:id="eliminarCarro" layoutX="849.0" layoutY="445.0" mnemonicParsing="false" onAction="#eliminaCarro" text="Eliminar" />
-      <TableView layoutX="695.0" prefHeight="391.0" prefWidth="227.0">
+      <TableView fx:id="table" layoutX="695.0" prefHeight="391.0" prefWidth="227.0">
         <columns>
           <TableColumn fx:id="ID" prefWidth="38.0" text="ID" />
           <TableColumn fx:id="ESTADO" prefWidth="69.0" text="ESTADO" />
